[package]
name = "dataloader"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
futures-util = "0.3.23"
parking_lot = "0.12.1"
tokio = { version = "1.20.1", features = ["rt", "sync"] }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
